# djangoapp

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
djangoapp/: settings.py
