[tool.poetry]
name = "djangoapp"
version = "0.1.0"
description = ""
authors = ["Rodney Rodriguez <anon@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.4"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
